# Platypus

./: CMakeLists.txt  LICENSE  README.md
sources/examples/spinning_platypus/: CMakeLists.txt
sources/examples/spinning_platypus/assets/: gun.ply  teapot.ply  teapot2.ply  terrain.ply
sources/examples/spinning_platypus/src/: main.c
sources/platypus/: CMakeLists.txt
sources/platypus/src/platypus/: platypus.c  platypus.h
sources/platypus/src/platypus/application/: plt_application.c  plt_application.h
sources/platypus/src/platypus/base/: macros.h  neon.h  platform.h  plt_defines.h  plt_linked_list.h  plt_macros.h  plt_simd.h  simd.h
sources/platypus/src/platypus/base/allocation/: plt_linear_allocator.c  plt_linear_allocator.h
sources/platypus/src/platypus/base/thread/: plt_thread.c  plt_thread.h  plt_thread_safe_stack.h
sources/platypus/src/platypus/color/: plt_color.c
sources/platypus/src/platypus/font/: plt_font.c  plt_font.h
sources/platypus/src/platypus/framebuffer/: plt_framebuffer.c  plt_framebuffer.h
sources/platypus/src/platypus/glad/: glad.c  glad.h
sources/platypus/src/platypus/input/: plt_input_state.c  plt_input_state.h
sources/platypus/src/platypus/math/: math.c  plt_collision.c  plt_collision.h  plt_math.c
sources/platypus/src/platypus/mesh/: plt_mesh.c  plt_mesh.h  plt_mesh_ply.c
sources/platypus/src/platypus/renderer/: plt_raster_function.h  plt_raster_function_helpers.h  plt_renderer.c  plt_renderer.h  plt_triangle_processor.c  plt_triangle_processor.h  plt_vertex_processor.c  plt_vertex_processor.h
sources/platypus/src/platypus/renderer/pipeline/: plt_raster_function.h  plt_raster_function_helpers.h  plt_triangle_bin.h  plt_triangle_processor.c  plt_triangle_processor.h  plt_triangle_rasteriser.c  (+3 more)
sources/platypus/src/platypus/texture/: plt_texture.c
sources/platypus/src/platypus/world/: plt_base_types.h  plt_object.c  plt_object.h  plt_world.c  plt_world.h
(+29 files in other folders)
